ExecReload -> docker restart

--- a/plex.service
+++ b/plex.service
@@ -11,8 +11,7 @@ ExecStartPre=-/usr/bin/docker rm %n
 ExecStartPre=/usr/bin/docker pull tyauvil/plex:latest
 ExecStart=/usr/bin/docker run --rm --net="host" --name %n -v /var/local/plex:/config -v /var/share/media:/media tyauvil/plex:latest
 ExecStop=-/usr/bin/docker stop %n
-ExecReload=-/usr/bin/docker stop %n
-ExecReload=-/usr/bin/docker start %n
+ExecReload=-/usr/bin/docker restart %n
 
 [Install]
 WantedBy=multi-user.target
